force-app/main/default/objects/CarteiraInvestimentos__c/CarteiraInvestimentos__c.object-meta.xml
<CustomObject>
    <label>Carteira de Investimentos</label>
    <nameField>
        <label>Código da Carteira</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteiras de Investimentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>