force-app/main/default/objects/CarteiraInvestimentos__c/fields/CarteiraAtiva__c.field-meta.xml
<CustomField>
    <fullName>CarteiraAtiva__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se a Carteira está ativa ou inativa</description>
    <inlineHelpText>Indica se a Carteira está ativa ou inativa</inlineHelpText>
    <label>Carteira Ativa</label>
    <type>Checkbox</type>
</CustomField>