force-app/main/default/objects/CarteiraInvestimentos__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Carteiras de Investimentos</relationshipLabel>
    <relationshipName>Carteiras_de_Investimentos</relationshipName>
    <type>Lookup</type>
</CustomField>