force-app/main/default/objects/CarteiraInvestimentos__c/fields/DataAbertura__c.field-meta.xml
<CustomField>
    <fullName>DataAbertura__c</fullName>
    <label>Data de Abertura</label>
    <type>Date</type>
</CustomField>