force-app/main/default/objects/CarteiraInvestimentos__c/fields/Instituicao__c.field-meta.xml
<CustomField>
    <fullName>Instituicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Instituição</label>
    <referenceTo>Instituicao__c</referenceTo>
    <relationshipLabel>Carteiras de Investimentos</relationshipLabel>
    <relationshipName>Carteiras_de_Investimentos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>