force-app/main/default/objects/CarteiraInvestimentos__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <description>Saldo em Carteira</description>
    <inlineHelpText>Saldo em Carteira</inlineHelpText>
    <label>Saldo</label>
    <summarizedField>Transacao__c.ValorContabil__c</summarizedField>
    <summaryForeignKey>Transacao__c.CarteiraInvestimentos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>